# DnData-Server

./: .editorconfig  .env  .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  manage.py  pyproject.toml  readme.md  requirements.txt
app/: __init__.py  app.py  config.py  models.py
dnd/: apps.py  models.py  serializers.py  urls.py  views.py
dnd/migrations/: 0001_initial.py
dndata/: manage.py
dndata/data/: admin.py  models.py  schema.py
dndata/data/character/: mutations.py  query.py  types.py
dndata/data/migrations/: 0001_initial.py  0002_auto_20201024_1622.py  0003_auto_20201024_1632.py  0004_auto_20201027_1849.py  0005_auto_20201029_1654.py  0006_auto_20201029_1700.py  0007_delete_characterrace.py  0008_auto_20201101_1210.py
dndata/data/models/: __init__.py  battle.py  campain.py  entities.py  players.py
dndata/dndata/: asgi.py  settings.py  urls.py  wsgi.py
dnddata/: asgi.py  settings.py  urls.py  views.py  wsgi.py
frontend/: package.json
tests/: test_dndata_server.py
